create add item feature

--- a/views/admin/item/edit.twig
+++ b/views/admin/item/edit.twig
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                     </div>
-                    <center><button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i> UPDATE </button></center>
+                    <center><button type="submit" class="btn btn-success"><i class="fa fa-pencil-square" aria-hidden="true"></i> UPDATE </button></center>
                     <hr style="margin-top:10px;margin-bottom:10px;">
 
                 </form>
