--- a/views/users/useritem.twig
+++ b/views/users/useritem.twig
@@ -58,8 +58,16 @@
                     Hide Reported Item
                 </button></a></a>
             {% endif %}
+                <a href="{{ path_for('user.item.all') }}" class="btn-clear discard-answer dno">
+                    <button class="btn btn-success " type="button">
+                         <i class="fa fa-plus-circle"></i>   Add Item
+                    </button>
+                </a>
+
+
     </div>
 </div>
+
 
 {% if reported == 1 %}
 <div class="" style="font-size:25px">
