--- a/views/admin/item/add.twig
+++ b/views/admin/item/add.twig
@@ -3,14 +3,14 @@
 {% block title %} Reporting App {% endblock %}
 
 {% block headContent %}
-    Add Item <i style="color:green" class="fa  fa-plus-square"></i>
+    Create Item <i style="color:green" class="fa  fa-file-text-o"></i>
 {% endblock %}
 
 {% block content %}
 
 <div class="box box-info" style="margin-top:30px">
     <div class="panel panel-default">
-        <div class="panel panel-heading"><h3 class="panel-title"><strong>Add Item</strong></h3></div>
+        <div class="panel panel-heading"><h3 class="panel-title"><strong>Create Item</strong></h3></div>
             <div class="panel-body">
                 <form  action="{{path_for('item.add.post')}}" method="post">
                     {% if errors %}
@@ -36,7 +36,7 @@
                         <div class="col-xs-12 col-sm-4 col-md-5">
                             <div class="form-group {{ errors.name ? 'has-error' : '' }}">
                                 <label for="name">Name</label>
-                                <input type="text" name="name" class="form-control"  value="{{ old.name }}">
+                                <input type="text" name="name" placeholder="Name" class="form-control"  value="{{ old.name }}">
                                 {% if errors.name %}
                                     <span class="help-block">{{ errors.name | first }}</span>
                                 {% endif %}
@@ -47,7 +47,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-7">
                             <div class="form-group {{ errors.description ? 'has-error' : '' }}">
                                 <label for="description">Description</label>
-                                <input type="text" name="description" class="form-control"  value="{{ old.description }}">
+                                <input type="text" name="description" placeholder="Description"  class="form-control"  value="{{ old.description }}">
                                 {% if errors.description %}
                                     <span class="help-block">{{ errors.description | first }}</span>
                                 {% endif %}
@@ -74,7 +74,7 @@
                         <div class="col-xs-12 col-sm-6 col-md-7">
                             <div class="form-group {{ errors.start_date ? 'has-error' : '' }}">
                                 <label for="start_date">Start date</label>
-                                <input type="datetime-local" name="start_date" class="form-control"  value="{{ old.start_date }}">
+                                <input type="datetime" placeholder="yy/dd/mm hh:mm:ss" name="start_date" class="form-control"  value="{{ old.start_date }}">
                                 {% if errors.start_date %}
                                     <span class="help-block">{{ errors.start_date | first }}</span>
                                 {% endif %}
@@ -83,14 +83,14 @@
                         <div class="col-xs-12 col-sm-6 col-md-5">
                             <div class="form-group {{ errors.end_date ? 'has-error' : '' }}">
                                 <label for="end_date">End date</label>
-                                <input type="datetime-local" name="end_date" class="form-control"  value="{{ old.end_date }}">
+                                <input type="datetime" placeholder="yy/dd/mm hh:mm:ss" name="end_date" class="form-control"  value="{{ old.end_date }}">
                                 {% if errors.end_date %}
                                     <span class="help-block">{{ errors.end_date | first }}</span>
                                 {% endif %}
                             </div>
                         </div>
                     </div>
-                    <center><button type="submit" class="btn btn-success"><i class="fa fa-floppy-o" aria-hidden="true"></i> ADD </button></center>
+                    <center><button type="submit" class="btn btn-success"><i class="fa fa-file-o" aria-hidden="true"></i> CREATE </button></center>
                     <hr style="margin-top:10px;margin-bottom:10px;">
 
                 </form>
