--- a/views/admin/article/article-read.twig
+++ b/views/admin/article/article-read.twig
@@ -10,7 +10,8 @@
 <div class="container">
 <div class="col-md-8 col-md-offset-1">
 	<div class="card">
-	  <center><img class="card-img-top" src="{{ base_url() }}/assets/images/{{ article.image }}" width="80%" height="300"></center>
+	  <center><img class="card-img-top" src="{{ base_url() }}/assets/images/{{ article.image }}"
+		   width="80%" height="300"></center>
 	  <div class="card-block">
 	    <h4 class="media-heading"> {{ article.title }} </h4>
 		<p class="fa fa-calendar"> {{ article.created_at|date('d/m/Y') }} </p>
