--- a/views/admin/group/partials/all-detail.twig
+++ b/views/admin/group/partials/all-detail.twig
@@ -4,10 +4,14 @@
 		<hr>
 		<div class="form-group">
 			<strong>
-				<p><span class="label label-success">{{ counts.group }}</span> <span class="pull-right"> groups </span></font></p>
-				<p><span class="label label-danger">{{ counts.user }}</span><span class="pull-right"> users</span></font></p>
-				<p><span class="label label-info">{{ counts.article }}</span><span class="pull-right"> articles</span></font></p>
-				<p><span class="label label-warning">{{ counts.item }}</span><span class="pull-right"> items </span></font></p>
+				<p><span class="label label-success">{{ counts.group }}</span>
+					 <span class="pull-right"> groups </span></font></p>
+				<p><span class="label label-danger">{{ counts.user }}</span>
+					<span class="pull-right"> users</span></font></p>
+				<p><span class="label label-info">{{ counts.article }}</span>
+					<span class="pull-right"> articles</span></font></p>
+				<p><span class="label label-warning">{{ counts.item }}</span>
+					<span class="pull-right"> items </span></font></p>
 				<hr>
 			</strong>
 		</div>
