--- a/views/admin/users/trash.twig
+++ b/views/admin/users/trash.twig
@@ -78,7 +78,8 @@ swal("Succes!", "Data Berhasil Di Delete !", "success")
                 <center><h3 class="modal-title" style="font-family:impact">D a t a  U s e r</h4></center>
                 </div>
             <div class="modal-body">
-                <center><img style="width:250px" class="pull-left" src="https://cdn1.iconfinder.com/data/icons/metro-ui-dock-icon-set--icons-by-dakirby/128/User_No-Frame_mirror.png" alt=""></center>
+                <center><img style="width:250px" class="pull-left"
+                    src="https://cdn1.iconfinder.com/data/icons/metro-ui-dock-icon-set--icons-by-dakirby/128/User_No-Frame_mirror.png" alt=""></center>
                 <p><b>Name :</b> {{data.name}}</p>
                 <p><b>Username :</b> {{data.username}}</p>
                 <p><b>Email :</b> {{data.email}}</p>
