--- a/views/users/additem.twig
+++ b/views/users/additem.twig
@@ -43,7 +43,8 @@
 				<div class="panel-body" align="right">
 					<input type="hidden" name="id" value="{{ group_id }}">
 
-					<button type="submit" name="set" value="1" class="btn btn-success"><i class="fa fa-plus" aria-hidden="true"></i> Add Item </button>
+					<button type="submit" name="set" value="1" class="btn btn-success">
+						<i class="fa fa-plus" aria-hidden="true"></i> Add Item </button>
 					<hr style="margin-top:10px;margin-bottom:10px;" >
 				</form>
 			</div>
