--- a/views/admin/article/article-list-active.twig
+++ b/views/admin/article/article-list-active.twig
@@ -8,7 +8,8 @@
 
 {% block content %}
 
-<a href="{{ path_for('article-add') }}" class="btn btn-primary"><i class="fa fa-plus" aria-hidden="true"></i> Tambah</a>
+<a href="{{ path_for('article-add') }}" class="btn btn-primary">
+	<i class="fa fa-plus" aria-hidden="true"></i> Tambah</a>
 
 <div class="row">
 	<div class="col-xs-12">
@@ -27,17 +28,22 @@
 						</thead>
 						{% for article in article %}
 						<tr>
-						    <td class="text-center"><input type="checkbox" name="inactive[]" value="{{ article.id }}"></td>
-						    <td><img src="{{ base_url() }}/assets/images/{{ article.image }}" width="100" height="100"></td>
-							<td><a href="{{ path_for('article-read', { id:article.id }) }}">{{ article.title }}</a></td>
+						    <td class="text-center"><input type="checkbox" name="inactive[]"
+								 value="{{ article.id }}"></td>
+						    <td><img src="{{ base_url() }}/assets/images/{{ article.image }}"
+								 width="100" height="100"></td>
+							<td><a href="{{ path_for('article-read', { id:article.id }) }}">
+							{{ article.title }}</a></td>
 							<td>{{ article.content|slice(0, 200) }}</td>
-							<td class="text-center"><a href="{{ path_for('article-edit', { id:article.id }) }}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
+							<td class="text-center"><a href="{{ path_for('article-edit', { id:article.id }) }}">
+								<i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
 						</tr>
 						{% endfor %}
 					</table>
 					<hr style="margin-top:10px;margin-bottom:10px;" >
 					<div class="panel-body" align="right">
-						<button type="submit" name="active"  class="btn btn-warning"><i class="fa fa-trash-o fa-lg" aria-hidden="true"></i> Delete </button>
+						<button type="submit" name="active"  class="btn btn-warning">
+							<i class="fa fa-trash-o fa-lg" aria-hidden="true"></i> Delete </button>
 						<hr style="margin-top:10px;margin-bottom:10px;">
 					</div>
 				</form>
