--- a/views/admin/group/partials/groups.twig
+++ b/views/admin/group/partials/groups.twig
@@ -3,22 +3,29 @@
 	{% for group in groups %}
 		<div class="col-sm-2 col-md-3">
 			<div class="thumb1">
-			<center><img src="{{ base_url() }}/assets/images/{{ group.image }}" height="151" width="151" style="margin-bottom:5px"></center>
+			<center><img src="{{ base_url() }}/assets/images/{{ group.image }}"
+				 height="151" width="151" style="margin-bottom:5px"></center>
 			  	<div class="caption">
 			    	<a href="{{ base_url() }}/admin/group/detail/{{ group.id }}"
-			    		class="btn btn-primary btn-block btn btn-info btn-md" style="margin-bottom:7px">
+			    		class="btn btn-primary btn-block btn btn-info btn-md"
+						 style="margin-bottom:7px">
 			    		<b>{{ group.name }}</b>
 			    	</a>
-					<input type="checkbox" name="group[]" value="{{ group.id }}"><font color=#0160a4> set inactive</font><span class="pull-right">
-					<a href="{{ path_for('edit.group.get', { ('id'):group.id }) }}">edit  <i class="fa fa-pencil"></i></a></span><hr>
+					<input type="checkbox" name="group[]" value="{{ group.id }}">
+					<font color=#0160a4> set inactive</font><span class="pull-right">
+					<a href="{{ path_for('edit.group.get', { ('id'):group.id }) }}">
+						edit  <i class="fa fa-pencil"></i></a></span><hr>
 			  	</div>
 			</div>
 	  	</div>
 	{% endfor %}
 </div>
-
+	{% if groups == null %}
+	<p align="center" style="color:red">There are no active groups</p>
+	{% elseif groups != null %}
 	<hr style="margin-top:10px;margin-bottom:10px;" >
 	<center><button type="submit" name="active"  class="btn btn-warning">
 	<i class="fa fa-trash-o fa-lg" aria-hidden="true"></i> Send to trash</button></center>
+	{% endif %}
 	<hr style="margin-top:10px;margin-bottom:10px;" >
 </form>
