--- a/views/admin/group/partials/image.twig
+++ b/views/admin/group/partials/image.twig
@@ -2,7 +2,8 @@
 	<!-- <div class="panel box-body" > -->
 		<!-- <div class="form-group"> -->
 			<strong>
-				<img src="{{ base_url() }}/assets/images/{{ group.image }}" align="center" width="234" height="234">
+				<img src="{{ base_url() }}/assets/images/{{ group.image }}"
+				 align="center" width="234" height="234">
 			</strong>
 		<!-- </div> -->
 	<!-- </div> -->
