--- a/views/admin/item/trash.twig
+++ b/views/admin/item/trash.twig
@@ -36,8 +36,12 @@
                                 <td>{{ item.start_date }}</td>
                                 <td>{{ item.end_date }}</td>
                                 <td>
-                                    <a href="{{ path_for('item.delete', {('id'): item.id})}}" title="Remove item" style="color:red" data-toggle="tooltip" data-placement="top"><i class="fa fa-trash-o"></i></a>
-                                    <a href="{{ path_for('item.restore', {('id'): item.id})}}" title="Restore item"  data-toggle="tooltip" data-placement="top"><i class="fa fa-refresh"></i></a>
+                                    <a href="{{ path_for('item.delete', {('id'): item.id})}}"
+                                     title="Remove item" style="color:red" data-toggle="tooltip"
+                                      data-placement="top"><i class="fa fa-trash-o"></i></a>
+                                    <a href="{{ path_for('item.restore', {('id'): item.id})}}"
+                                     title="Restore item"  data-toggle="tooltip" data-placement="top">
+                                     <i class="fa fa-refresh"></i></a>
                                 </td>
                             </tr>
                         {% endfor %}
