--- a/views/templates/partials/sidebarNav.twig
+++ b/views/templates/partials/sidebarNav.twig
@@ -1,7 +1,8 @@
 <section class="sidebar">
     <div class="user-panel">
         <div class="pull-left image">
-            <img src="{{ base_url() }}/assets/images/{{ login.image }}" class="img-circle" alt="User Image" style="height:50px">
+            <img src="{{ base_url() }}/assets/images/{{ login.image }}"
+             class="img-circle" alt="User Image" style="height:50px">
         </div>
 
         <div class="pull-left info">
@@ -27,8 +28,8 @@
                 </span>
             </a>
             <ul class="treeview-menu">
+                <li><a href="{{path_for('create.group.get')}}">Create Group</a></li>
                 <li><a href="{{path_for('group.list')}}">Group List</a></li>
-                <li><a href="{{path_for('create.group.get')}}">Add Group</a></li>
                 <li><a href="{{path_for('group.inactive')}}">Group Inactive</a></li>
             </ul>
         </li>
@@ -54,8 +55,8 @@
             </a>
             <ul class="treeview-menu">
                 <li><a href="{{ path_for('article-add') }}">Create Article</a></li>
-                <li><a href="{{ path_for('article-list-active') }}">Article List Active</a></li>
-                <li><a href="{{ path_for('article-list-inactive') }}">Article List Inactive</a></li>
+                <li><a href="{{ path_for('article-list-active') }}">Article List</a></li>
+                <li><a href="{{ path_for('article-list-inactive') }}">Article Inactive</a></li>
             </ul>
         </li>
         <li class="treeview">
