--- a/views/users/change.twig
+++ b/views/users/change.twig
@@ -12,7 +12,8 @@
                         <div class="input-group-addon">
                             <i class="fa fa-lock"></i>
                         </div>
-                        <input type="password" class="form-control input-medium bfh-password" name="password" value="" placeholder="Old password">
+                        <input type="password" class="form-control input-medium bfh-password"
+                         name="password" value="" placeholder="Old password">
                     </div>
                     {% if errors.password %}
                         <span class="help-block">{{errors.password | first}}</span>
@@ -25,7 +26,8 @@
                         <div class="input-group-addon">
                             <i class="fa fa-lock"></i>
                         </div>
-                        <input type="password" class="form-control input-medium bfh-password" name="new_password" value="" placeholder="New password">
+                        <input type="password" class="form-control input-medium bfh-password"
+                         name="new_password" value="" placeholder="New password">
                     </div>
                     {% if errors.new_password %}
                         <span class="help-block">{{errors.new_password | first}}</span>
@@ -38,13 +40,15 @@
                         <div class="input-group-addon">
                             <i class="fa fa-lock"></i>
                         </div>
-                        <input type="password" class="form-control input-medium bfh-password" name="retype_password" value="" placeholder="Retype password">
+                        <input type="password" class="form-control input-medium bfh-password"
+                         name="retype_password" value="" placeholder="Retype password">
                     </div>
                     {% if errors.new_password %}
                         <span class="help-block">{{errors.new_password | first}}</span>
                     {% endif %}
                 </div>
-                <button type="submit" class="btn btn-default" style="margin:10px"><i class="fa fa-cog"></i> update</button>
+                <button type="submit" class="btn btn-default" style="margin:10px">
+                    <i class="fa fa-cog"></i> update</button>
     </form>
         </div>
     </div>
