--- a/views/templates/partials/flash.twig
+++ b/views/templates/partials/flash.twig
@@ -44,5 +44,5 @@
 			{{ flash.getMessage('succes') | first }}
 
 			<strong><span class="glyphicon glyphicon-check"></strong>
-		</div>
+		</div></center>
 {% endif %}
