--- a/views/admin/users/add.twig
+++ b/views/admin/users/add.twig
@@ -78,9 +78,9 @@
 
                                 <select name="gender" class="form-control" id="">
                                     <option value="">Select Gender</option>
-                                    <option value="L"{% if  old.gender == "L" %}
-                                     selected="selected"{% endif %}>Laki-Laki</option>
-                                    <option value="P"{% if  old.gender == "P" %}
+                                    <option value="Laki-laki"{% if  old.gender == "Laki-laki" %}
+                                     selected="selected"{% endif %}>Laki-laki</option>
+                                    <option value="Perempuan"{% if  old.gender == "Perempuan" %}
                                      selected="selected"{% endif %}>Perempuan</option>
                                 </select>
                             </div>
