--- a/views/admin/article/timeline.twig
+++ b/views/admin/article/timeline.twig
@@ -9,7 +9,13 @@
                 <p class="fa fa-calendar"> {{ article.created_at|date('d/m/Y') }} </p>
                 <p class="fa fa-clock-o"> {{ article.created_at|date("H:m") }} </p>
                 <p class="text-justify">{{ article.content|slice(0, 300) }}
+
+                    {% if login.status == 1 %}
                     <a href="{{ path_for('article-read', { id:article.id }) }}">Readmore...</a></p>
+                    {% elseif login.status == 0 %}
+                    <a href="{{ path_for('user.article-read', { id:article.id }) }}">Readmore...</a></p>
+                    {% endif %}
+
                     <br>
                 {% endfor %}
             </div>
