--- a/views/admin/article/article-add.twig
+++ b/views/admin/article/article-add.twig
@@ -19,7 +19,7 @@
                     {% endif %}
                 </div>
                 <div class="form-group {{ errors.content ? 'has-error': '' }}">
-                    <textarea name="content" class="form-control" placeholder="Content" rows="10">
+                    <textarea name="content" id="summernote" class="form-control" placeholder="Content" rows="10">
                     	
                     </textarea>
                     {% if errors.content %}
