--- a/views/admin/article/article-read.twig
+++ b/views/admin/article/article-read.twig
@@ -16,7 +16,7 @@
 	    <h4 class="media-heading"> {{ article.title }} </h4>
 		<p class="fa fa-calendar"> {{ article.created_at|date('d/m/Y') }} </p>
 		<p class="fa fa-clock-o"> {{ article.created_at|date("H:m") }} </p>
-		<p> {{ article.content }} </p>
+		<p> {{ article.content |raw }} </p>
 	  </div>
 	</div>
 	</div>
