--- a/views/admin/article/timeline.twig
+++ b/views/admin/article/timeline.twig
@@ -8,7 +8,7 @@
                 <h4 class="media-heading">{{ article.title }}</h4>
                 <p class="fa fa-calendar"> {{ article.created_at|date('d/m/Y') }} </p>
                 <p class="fa fa-clock-o"> {{ article.created_at|date("H:m") }} </p>
-                <p class="text-justify">{{ article.content|slice(0, 300) }}
+                <p class="text-justify">{{ article.content|slice(0, 300)|raw }}
 
                     {% if login.status == 1 %}
                     <a href="{{ path_for('article-read', { id:article.id }) }}">Readmore...</a></p>
